# PoissonRecon

./: CMakeLists.txt  README.md
libpoisson/: CMakeLists.txt  estimate_normals.cpp  estimate_normals.h  poisson_reconstruction_screened.cpp  poisson_reconstruction_screened.h
libpoisson.test/: CMakeLists.txt  estimate_normals.cpp  estimate_normals.h  poisson_recon.cpp  poisson_recon.h  test.cpp
libpoisson/jtk/: containers.h  mat.h  point_tree.h
libpoisson/poisson_screened/: Allocator.h  Array.h  BSplineData.h  BinaryNode.h  CmdLineParser.cpp  CmdLineParser.h  Factor.cpp  Factor.h  FunctionData.h  Geometry.cpp  Geometry.h  Geometry.inl  MAT.h  MarchingCubes.cpp  MarchingCubes.h  MemoryUsage.h  MultiGridOctreeData.Evaluation.inl  MultiGridOctreeData.IsoSurface.inl  MultiGridOctreeData.SortedTreeNodes.inl  MultiGridOctreeData.System.inl  MultiGridOctreeData.WeightedSamples.inl  MultiGridOctreeData.h  MultiGridOctreeData.inl  MyTime.h  Octree.h  Octree.inl  PPolynomial.h  PPolynomial.inl  Ply.h  PlyFile.cpp  PlyVertexMini.h  PointStream.h  PoissonRecon.cpp  Polynomial.h  Polynomial.inl  SSDRecon.cpp  SparseMatrix.h  SurfaceTrimmer.cpp  Vector.h  Vector.inl
